--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <html>
 <head>
-    <title>Canvas Yo!</title>
+    <title>Browser Battle</title>
     <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-        }
-        #body {
-            background-image: url(bg.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            height: 100%;
-        }
+        body {background-color:#333; margin:40px auto 0; width:640px;}
+        * {color:white; font-size:24px;}
+        .content {border:5px solid white; border-radius:10px; background-color:#33f;}
+        .content > * {padding:20px 10px;}
+        .title {font-size:200%; font-weight:bold; color:#ff0; text-align:center;}
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 </head>
 <body>
-<div id="body"></div>
+<div class="content">
+    <div class="title">Browser Battle</div>
+    <div>This is just a quick and dirty project to play with html5 and javascript. It recreates a rough approximation of
+        a final fantasy battle.
+    </div>
+    <div>Enter the konami code to start.</div>
+</div>
 <script src="index.js"></script>
 </body>
 </html>
